# gamechat

./: .gitignore  L4-SK-CreateDB.ipynb  README.md  SK_VECTORIZER_README.md  demo.ipynb  pyproject.toml  readxml.py  sk_vectorizer.py  test_vectorizer.py  utility.py  xmltojson.py
ai_layer/: __init__.py  models.py  vector.py
chroma-sk/: chroma.sqlite3
